# Perturbation-PSF

./: .gitignore  LICENSE  README.md  SUBMISSION_SUMMARY.md  pyproject.toml
analysis/: claude_science_psf_pipeline.py
data/results/: equal_source_estimand.csv  estimand_sensitivity.csv  exclusion_tests.csv  leave_one_mouse.csv  mde_intervals_obs.csv  module_robustness.csv  per_mouse_breakdown.csv
data/synthetic/: source_recipient_frame.csv
docs/: HACKATHON_NARRATIVE.md  PROJECT_LOG.md  RESPONSE_TO_REVIEW_R4.md  reproducibility_appendix.md
notebooks/: PerturbationPSF_pipeline.ipynb
scripts/: 00_download_data.sh  make_synthetic_data.py  run_audit.py
src/perturbation_psf/: __init__.py  audit.py
tests/: test_audit.py
